--- a/example.env
+++ b/example.env
@@ -4,3 +4,9 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 APP_PORT=5000
+
+GOOGLE_CREDENTIALS_PATH_DEV=./credentials/service-account.json
+GOOGLE_CREDENTIALS_PATH=/app/credentials/service-account.json
+
+# your_wb_token
+WB_API_TOKEN=
